# audio_player

./: .gitignore  .gitmodules  Cargo.toml  README  rust-analyzer.toml
.cargo/: config.toml
src/: main.rs
