[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[features]
# choose one of: symphonia-subset, symphonia-all
symphonia-subset = [
	"rodio/playback",
	"rodio/symphonia",

	"rodio/flac",
	"rodio/mp3",
	"rodio/mp4",
	"rodio/symphonia-ogg",
	"rodio/libopus",

	"symphonia/flac",
	"symphonia/aac",
	"symphonia/alac",
	"symphonia/mpa",
	"symphonia/isomp4",
	"symphonia/ogg",
]

symphonia-all = [
	"rodio/playback",
	"rodio/symphonia",
	"rodio/libopus",

	"symphonia/all-formats",
	"symphonia/all-codecs"
]

# for linux and BSDs, pick between pulseaudio and JACK
# https://github.com/RustAudio/cpal/blob/master/Cargo.toml
pulseaudio = ["cpal/pulseaudio"]
jack = ["cpal/jack"]
audio_thread_priority = ["cpal/audio_thread_priority"]

# all simd features are optional
simd-all = ["symphonia/opt-simd"]
simd-avx = ["symphonia/opt-simd-avx"]
simd-neon = ["symphonia/opt-simd-neon"]
simd-sse = ["symphonia/opt-simd-sse"]

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "derive-more", "events"] }
cpal = "0.17.3"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm", "layout-cache", "macros", "underline-color"] }
rodio = { path = "./rodio", default-features = false }
rand = "0.10.0"
symphonia-adapter-libopus = "0.2.6"
symphonia = { version = "0.5.5" , default-features = false }

# symphonia default: adpcm, flac, mkv, ogg, pcm, vorbis, wav
# codecs/bundles
# adpcm -> symphonia-codec-adpcm
# pcm -> symphonia-codec-pcm
# vorbis -> symphonia-codec-vorbis
# aac -> symphonia-codec-aac
# alac -> symphonia-codec-alac
# flac -> symphonia-bundle-flac
# mp1 -> symphonia-bundle-mp3/mp1
# mp2 -> symphonia-bundle-mp3/mp2
# mp3 -> symphonia-bundle-mp3/mp3
# mpa -> mp1, mp2, mp3

# formats
# isomp4 -> symphonia-format-isomp4
# mkv -> symphonia-format-mkv
# ogg -> symphonia-format-ogg
# wav -> symphonia-format-riff/wav
# aiff -> symphonia-format-riff/aiff
# caf -> symphonia-format-caf

# all -> all-codecs, all-formats
# all-codecs -> aac, adpcm, alac, flac, mp1, mp2, mp3, pcm, vorbis
# all-formats -> aiff, caf, isomp4, mkv, ogg, wav
